Crd_GSN/Crd_GSN/gts.h

#define CHANNEL_HOST                   (0)
#define CHANNEL_UART                   (1)
#define CHANNEL_SIM                    (2)
#define CHANNEL_ETHER                  (3)
#define CHANNEL_RS232                  (4)
#define CHANNEL_PCIE                   (5)
/*-----------------------------------------------------------*/
/* 错误代码                                                  */
/*-----------------------------------------------------------*/

#define CMD_SUCCESS                     0
#define CMD_ERROR_READ_LEN             -2    /* 读取数据长度错误 */
#define CMD_ERROR_READ_CHECKSUM        -3    /* 读取数据校验和错误 */
#define CMD_ERROR_WRITE_BLOCK          -4    /* 写入数据块错误 */
#define CMD_ERROR_READ_BLOCK           -5    /* 读取数据块错误 */
#define CMD_ERROR_OPEN                 -6    /* 打开设备错误 */
#define CMD_ERROR_CLOSE                -6    /* 关闭设备错误 */
#define CMD_ERROR_DSP_BUSY             -7    /* DSP忙 */
#define CMD_LOCK_ERROR                 -8    /*多线程资源忙*/
#define CMD_ERROR_EXECUTE               1
#define CMD_ERROR_VERSION_NOT_MATCH     3
#define CMD_ERROR_PARAMETER             7
#define CMD_ERROR_UNKNOWN               8    /* 不支持的指令 */
//等环网返回值


#define MC_NONE                         (-1)
#define MC_LIMIT_POSITIVE               (0)
#define MC_LIMIT_NEGATIVE               (1)
#define MC_ALARM                        (2)
#define MC_HOME                         (3)
#define MC_GPI                          (4)
#define MC_ARRIVE                       (5)
#define MC_EGPI0                     (6)
// #define MC_EGPI1                     (7)
// #define MC_EGPI2                     (8)
#define MC_MPG                          (9)
#define MC_ENABLE                       (10)
#define MC_CLEAR                        (11)
#define MC_GPO                          (12)
// #define MC_EGPO0                     (13)
// #define MC_EGPO1                     (14)
#define MC_AU_ADC						(17)
#define MC_HSO                          (18)
#define MC_DAC                          (20)
#define MC_STEP                         (21)
#define MC_PULSE                        (22)
#define MC_ENCODER                      (23)
#define MC_ADC                          (24)
#define MC_AU_ENCODER                   (26)
#define MC_ABS_ENCODER                  (29)
#define MC_AXIS                         (30)
#define MC_PROFILE                      (31)
#define MC_CONTROL                      (32)
#define MC_TRIGGER                      (40)
#define MC_TERMINAL                     (50)
#define MC_EXT_MODULE                   (60)
#define MC_EXT_DI                       (61)
#define MC_EXT_DO                       (62)
#define MC_EXT_AI                       (63)
#define MC_EXT_AO                       (64)
#define MC_SCAN_CRD                     (70)
#define MC_POS_COMPARE                  (80)
#define MC_WATCH_VAR                    (200)
#define MC_WATCH_EVENT                  (201)
typedef struct  
{
	short year;
	short month;
	short day;
	short version;
	short user;
	short reserve1;
	short reserve2;
	short chip;
} TVersion;
#define CORE_MODE_TIMER					(0)
#define CORE_MODE_SYNCH					(1)
#define CORE_MODE_EXTERNAL				(2)
#define CORE_TASK_DEFAULT				(0)
#define CORE_TASK_DLM					(1)
#define SKIP_MODULE_SCAN				(0x001)
#define SKIP_MODULE_POS_COMPARE			(0x002)
#define SKIP_MODULE_CRD					(0x004)
#define SKIP_MODULE_PLC					(0x010)
#define SKIP_MODULE_DLM					(0x020)
#define SKIP_MODULE_AXIS_CALCULATE		(0x100)
#define SKIP_MODULE_WATCH				(0x800)
typedef enum
{
	TIME_ELAPSE_PROFILE = 1000,

	TIME_ELAPSE_HOST_COMMAND_EXECUTE = 1220,
	TIME_ELAPSE_ETHER_COMMAND_EXECUTE,

	TIME_ELAPSE_PROFILE_CALCULATE = 6000,

	TIME_ELAPSE_SCAN = 18000,

	TIME_ELAPSE_AXIS_CHECK = 20000,
	TIME_ELAPSE_AXIS_CALCULATE,

	TIME_ELAPSE_ENCODER = 30000,

	TIME_ELAPSE_DI = 31000,

	TIME_ELAPSE_DO = 32000,

	TIME_ELAPSE_AI = 33000,

	TIME_ELAPSE_AO = 34000,

	TIME_ELAPSE_TRIGGER = 38000,

	TIME_ELAPSE_CONTROL = 40000,

	TIME_ELAPSE_WATCH = 52000,

	TIME_ELAPSE_TERMINAL = 53000,
	TIME_ELAPSE_TERMINALDET = 54000,

} ETimeElapse;
typedef struct
{
	unsigned short type;
	short id;
	long status;
	unsigned long synchCount;
	unsigned long ringNetType;//网络类型
	unsigned long portStatus;//模块端口状态
	unsigned long sportDropCount;//模块SPORT包丢失个数
	unsigned long reserve[7];
} TTerminalStatus;
typedef struct Pid
{
	double kp;
	double ki;
	double kd;
	double kvff;
	double kaff;
	long   integralLimit;
	long   derivativeLimit;
	short  limit;
} TPid;
GT_API GT_SetCardNo(short index);
GT_API GT_GetCardNo(short *pIndex);
GT_API GT_Open(short channel=5,short param=1);
GT_API GT_OpenAllDevice(short channel=5,short param=1,char *pFile=NULL,short *pDeviceCount=NULL);
GT_API GT_Close(void);
GT_API GT_SetCore(short core);
GT_API GT_GetCore(short *pCore);
GT_API GT_GetChannel(short *pChannel);
GT_API GT_GetVersion(char **pVersion);
GT_API GT_GetVersionEx(short type,TVersion *pVersion);
GT_API GT_SetVersion(short type,TVersion *pVersion);
GT_API GT_Reset();
GT_API GT_GetClock(unsigned long *pClock,unsigned long *pLoop=NULL);
GT_API GT_GetClockHighPrecision(unsigned long *pClock);
GT_API GT_ClearTime(ETimeElapse item);
GT_API GT_GetTime(ETimeElapse item,unsigned long *pTime,unsigned long *pTimeMax,unsigned long *pValue=NULL);
GT_API GT_GetResMax(short core,short type,short *pCount);
GT_API GT_SetResCount(short type,short count);
GT_API GT_GetResCount(short core,short type,short *pCount);
GT_API GT_GetSts(short axis,long *pSts,short count=1,unsigned long *pClock=NULL);
GT_API GT_ClrSts(short axis,short count=1);
GT_API GT_AxisOn(short axis);
GT_API GT_AxisOff(short axis);
GT_API GT_MultiAxisOn(unsigned long mask);
GT_API GT_MultiAxisOff(unsigned long mask);
GT_API GT_SetAxisOnDelayTime(unsigned short ms);
GT_API GT_GetAxisOnDelayTime(unsigned short *pMs);
GT_API GT_Stop(long mask,long option);
GT_API GT_SetPrfPos(short profile,long prfPos);
GT_API GT_SynchAxisPos(long mask);
GT_API GT_ZeroPos(short axis,short count=1);
GT_API GT_SynchPrfPosWithEncPos(short profile,short encoder);
GT_API GT_GetLimitStatus(short axis,short *pLimitPositive,short *pLimitNegative);
GT_API GT_SetSoftLimitMode(short axis,short mode);
GT_API GT_GetSoftLimitMode(short axis,short *pMode);
GT_API GT_SetSoftLimit(short axis,long positive,long negative);
GT_API GT_GetSoftLimit(short axis,long *pPositive,long *pNegative);
GT_API GTN_SetAuDac(short core,short dac,short *pValue,short count=1);
GT_API GTN_GetAuDac(short core,short dac,short *pValue,short count=1,unsigned long *pClock=NULL);
GT_API GTN_GetAuAdc(short core,short adc,double *pValue,short count=1,unsigned long *pClock=NULL);
GT_API GTN_GetAuAdcValue(short core,short adc,short *pValue,short count=1,unsigned long *pClock=NULL);
GT_API GTN_SetGPIOConfig(short core,short effectiveLevel,short direction);