Crd_GSN/Crd_GSN/config.h

GT_API GTN_GetExtModuleCount(short core,short station,short *pCount);