Coordinate1.4/Crd/Crd/gts.cs

using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading;                        //Tasks;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Data;
using System.Drawing;
using System.Windows.Forms;

namespace GTN
    {
    public class mc
     {
        public const short CHANNEL_HOST=0;
        public const short CHANNEL_UART=1;
        public const short CHANNEL_SIM=2;
        public const short CHANNEL_ETHER=3;
        public const short CHANNEL_RS232=4;
        public const short CHANNEL_PCIE=5;

/*-----------------------------------------------------------*/
/* 错误代码                                                  */
/*-----------------------------------------------------------*/

        public const short CMD_SUCCESS=0;

        public const short CMD_ERROR_READ_LEN= -2 ;   /* 读取数据长度错误 */
        public const short CMD_ERROR_READ_CHECKSUM=-3 ;   /* 读取数据校验和错误 */

        public const short CMD_ERROR_WRITE_BLOCK = -4 ;   /* 写入数据块错误 */
        public const short CMD_ERROR_READ_BLOCK = -5 ;   /* 读取数据块错误 */

        public const short CMD_ERROR_OPEN =-6 ;   /* 打开设备错误 */
        public const short CMD_ERROR_CLOSE =-6 ;   /* 关闭设备错误 */
        public const short CMD_ERROR_DSP_BUSY = -7;    /* DSP忙 */

        public const short CMD_LOCK_ERROR = -8  ;  /*多线程资源忙*/

        public const short CMD_ERROR_EXECUTE = 1;
        public const short CMD_ERROR_VERSION_NOT_MATCH = 3;
        public const short CMD_ERROR_PARAMETER= 7;
        public const short CMD_ERROR_UNKNOWN =8 ;   /* 不支持的指令 */


        public const short MC_NONE  = -1;

        public const short MC_LIMIT_POSITIVE =0;
        public const short MC_LIMIT_NEGATIVE = 1;
        public const short MC_ALARM  =(2);
        public const short MC_HOME  =(3);
        public const short MC_GPI = (4);
        public const short MC_ARRIVE = (5);
//      public const short MC_EGPI0     =(6);
//      public const short MC_EGPI1     = (7);
//      public const short MC_EGPI2     =(8);
        public const short MC_MPG       = (9);

        public const short MC_ENABLE     =                  (10);
        public const short MC_CLEAR      =                  (11);
        public const short MC_GPO        =                  (12);
//      public const short MC_EGPO0      =                  (13);
//      public const short MC_EGPO1      =                  (14);

        public const short MC_HSO           =               (18);

        public const short MC_DAC         =                 (20);
        public const short MC_STEP       =                  (21);
        public const short MC_PULSE       =                 (22);
        public const short MC_ENCODER     =                 (23);
        public const short MC_ADC         =                 (24);
        public const short MC_AU_ADC      =                  (17);
        public const short MC_AU_ENCODER          =         (26);

        public const short MC_ABS_ENCODER       =           (29);

        public const short MC_AXIS             =            (30);
        public const short MC_PROFILE               =       (31);
        public const short MC_CONTROL              =        (32);

        public const short MC_TRIGGER             =         (40);

        public const short MC_TERMINAL            =         (50);

        public const short MC_EXT_MODULE           =        (60);
        public const short MC_EXT_DI                =       (61);
        public const short MC_EXT_DO                =       (62);
        public const short MC_EXT_AI               =        (63);
        public const short MC_EXT_AO                =       (64);

        public const short MC_SCAN_CRD                =     (70);

        public const short MC_POS_COMPARE            =      (80);

        public const short MC_WATCH_VAR              =      (200);
        public const short MC_WATCH_EVENT            =      (201);

        public struct TVersion
        {
	    public short year;
	    public short month;
	    public short day;
	    public short version;
	    public short user;
	    public short reserve1;
	    public short reserve2;
	    public short chip;
         } 
        public const short CORE_MODE_TIMER			=		(0);
        public const short CORE_MODE_SYNCH			=		(1);
        public const short CORE_MODE_EXTERNAL			=	(2);

        public const short CORE_TASK_DEFAULT			=	(0);
        public const short CORE_TASK_DLM				=	(1);

        public const short SKIP_MODULE_SCAN			=	(0x001);
        public const short SKIP_MODULE_POS_COMPARE		=	(0x002);
        public const short SKIP_MODULE_CRD			=	(0x004);

        public const short SKIP_MODULE_PLC			=	(0x010);
        public const short SKIP_MODULE_DLM			=	(0x020);

        public const short SKIP_MODULE_AXIS_CALCULATE		=(0x100);

        public const short SKIP_MODULE_WATCH				=(0x800);

        public enum ETimeElapse
        {
	        TIME_ELAPSE_PROFILE = 1000,

	        TIME_ELAPSE_HOST_COMMAND_EXECUTE = 1220,
	        TIME_ELAPSE_ETHER_COMMAND_EXECUTE,

	        TIME_ELAPSE_PROFILE_CALCULATE = 6000,

	        TIME_ELAPSE_SCAN = 18000,

	        TIME_ELAPSE_AXIS_CHECK = 20000,
	        TIME_ELAPSE_AXIS_CALCULATE,

	        TIME_ELAPSE_ENCODER = 30000,

	        TIME_ELAPSE_DI = 31000,

	        TIME_ELAPSE_DO = 32000,

	        TIME_ELAPSE_AI = 33000,

	        TIME_ELAPSE_AO = 34000,

	        TIME_ELAPSE_TRIGGER = 38000,

	        TIME_ELAPSE_CONTROL = 40000,

	        TIME_ELAPSE_WATCH = 52000,

	        TIME_ELAPSE_TERMINAL = 53000,
            TIME_ELAPSE_TERMINALDET = 54000,

       } 
        
public struct TTerminalStatus
{
    public ushort type;
    public short id;
    public Int32 status;
    public UInt32 synchCount;
    public UInt32 ringNetType;//网络类型
    public UInt32 coreStatus;//模块端口状态
    public UInt32 scoreDropCount;//模块SPORT包丢失个数
    public UInt32 reserve1;
    public UInt32 reserve2;
    public UInt32 reserve3;
    public UInt32 reserve4;
    public UInt32 reserve5;
    public UInt32 reserve6;
    public UInt32 reserve7;

} 

        public struct TPid
        {
	            public double kp;
	            public double ki;
	            public double kd;
	            public double kvff;
	            public double kaff;
	            public Int32   IntegralLimit;
	            public Int32   derivativeLimit;
	            public short  limit;
         }
        [DllImport("gts.dll")]
        public static extern short GTN_GetExtModuleCount(short core, short station, out short pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_SetAuDac(short core, short dac,ref short pValue, short count);
        [DllImport("gts.dll")]
        public static extern short GTN_GetAuDac(short core, short dac, out short pValue, short count, out Int32 pClock);
        [DllImport("gts.dll")]
        public static extern short GTN_GetAuAdcValue(short core, short adc, out short pValue, short count, out Int32 pClock);
        [DllImport("gts.dll")]
        public static extern short GTN_GetAuAdc(short core, short adc, out double pValue, short count, out Int32 pClock);
        [DllImport("gts.dll")]
        public static extern short GTN_SetGPIOConfig(short core, short station, long effectiveLevel, long direction);
        [DllImport("gts.dll")]
        public static extern short GT_SetCardNo(short index);
        [DllImport("gts.dll")]
        public static extern short GT_GetCardNo(out short index);
        [DllImport("gts.dll")]
        public static extern short GT_Open(short channel,short param);
        [DllImport("gts.dll")]
        public static extern short GT_OpenAllDevice(short channel,short param,ref string pFile,ref short pDeviceCount);
        [DllImport("gts.dll")]
        public static extern short GT_Close();
        [DllImport("gts.dll")]
        public static extern short GT_SetCore(short core);
        [DllImport("gts.dll")]
        public static extern short GT_GetCore(out short core);
        [DllImport("gts.dll")]
        public static extern short GT_GetChannel(out short pChannel);
        [DllImport("gts.dll")]
        public static extern short GT_GetVersion(out string pVersion);
        [DllImport("gts.dll")]
        public static extern short GT_GetVersionEx(short type,out TVersion pVersion);
        [DllImport("gts.dll")]
        public static extern short GT_SetVersion(short type, ref TVersion pVersion);
        [DllImport("gts.dll")]
        public static extern short GT_Reset();
        [DllImport("gts.dll")]
        public static extern short GT_GetClock(out UInt32 pClock, out UInt32 pLoop);
        [DllImport("gts.dll")]
        public static extern short GT_GetClockHighPrecision(out UInt32 pClock);
        [DllImport("gts.dll")]
        public static extern short GT_ClearTime(ETimeElapse item);
        [DllImport("gts.dll")]
        public static extern short GT_GetTime(ETimeElapse item, out UInt32 pTime, out UInt32 pTimeMax, out UInt32 pValue);
        [DllImport("gts.dll")]
        public static extern short GT_GetResMax(short core,short type,out short pCount);
        [DllImport("gts.dll")]
        public static extern short GT_SetResCount(short type,short count);
        [DllImport("gts.dll")]
        public static extern short GT_GetResCount(short core,short type,out short pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetSts(short axis, out Int32 pSts, short count, out UInt32 pClock);
        [DllImport("gts.dll")]
        public static extern short GT_ClrSts(short axis,short count);
        [DllImport("gts.dll")]
        public static extern short GT_AxisOn(short axis);
        [DllImport("gts.dll")]
        public static extern short GT_AxisOff(short axis);
        [DllImport("gts.dll")]
        public static extern short GT_MultiAxisOn(UInt32 mask);
        [DllImport("gts.dll")]
        public static extern short GT_MultiAxisOff(UInt32 mask);
        [DllImport("gts.dll")]
        public static extern short GT_SetAxisOnDelayTime(ushort ms);
        [DllImport("gts.dll")]
        public static extern short GT_GetAxisOnDelayTime(out ushort pMs);
        [DllImport("gts.dll")]
        public static extern short GT_Stop(Int32 mask, Int32 option);
        [DllImport("gts.dll")]
        public static extern short GT_SetPrfPos(short profile, Int32 prfPos);
        [DllImport("gts.dll")]
        public static extern short GT_SynchAxisPos(Int32 mask);
        [DllImport("gts.dll")]
        public static extern short GT_ZeroPos(short axis,short count);
        [DllImport("gts.dll")]
        public static extern short GT_SynchPrfPosWithEncPos(short profile, short encoder);
        [DllImport("gts.dll")]
        public static extern short GT_GetLimitStatus(short axis,out short pLimitPositive,out short pLimitNegative);
        [DllImport("gts.dll")]
        public static extern short GT_SetSoftLimitMode(short axis,short mode);
        [DllImport("gts.dll")]
        public static extern short GT_GetSoftLimitMode(short axis,out short pMode);
        [DllImport("gts.dll")]
        public static extern short GT_SetSoftLimit(short axis, Int32 positive, Int32 negative);
        [DllImport("gts.dll")]
        public static extern short GT_GetSoftLimit(short axis, out Int32 pPositive, out Int32 pNegative);
